[package]
name = "on-call-support"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
aws_lambda_events = { version = "1.0.3", default-features = false, features = ["apigw"] }
aws-config = { version = "1.8.12", features = ["rustls"] }
aws-sdk-cloudformation = { version = "1.105.0", features = ["rustls"] }
aws-sdk-dynamodb = { version = "1.102.0", features = ["rustls"] }
aws-sdk-eventbridge = { version = "1.99.0", features = ["rustls"] }
aws-sdk-kms = { version = "1.98.0", features = ["rustls"] }
aws-sdk-lambda = { version = "1.100.0", features = ["rustls"] }
aws-sdk-scheduler = { version = "1.92.0", features = ["rustls"] }
aws-sdk-secretsmanager = {  version="1.98.0", features = ["rustls"]}
aws-esdk = "1.2.1"
base64 = "0.22.1"
chacha20poly1305 = {version="0.10.1", features=["std"]}
chrono = "0.4.43"
chrono-tz = {version = "0.10.4", features=["std", "case-insensitive"]}
clap = {version ="4.5.54", features=["derive"]}
cron = "0.15.0"
derive_more = {version = "2.1.1", features=["full"]}
futures = "0.3.28"
hex = "0.4.3"
lambda_runtime = "1.0.2"
lazy_static = "1.4.0"
more-asserts = "0.3.1"
rand="0.9.2"
regex = "1.12.2"
reqwest = {version="0.13", features=["gzip", "json", "query"]}
ring = "0.17.14"
subtle = "2.6.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
shlex = "1.1.0"
thiserror = "2.0.18"
tokio = { version = "^1.49.0", features=["rt-multi-thread", "macros", "sync"]}
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log", "json"] }

[dev-dependencies]
serial_test = "3.3.1"
tokio-test = "0.4.5"
aws-smithy-mocks = "0.2.3"
aws-sdk-cloudformation = {version="1.104.0", features = ["test-util"]}
aws-sdk-dynamodb = {version="1.101.0", features = ["test-util"]}
aws-sdk-eventbridge = {version="1.98.0", features = ["test-util"]}
aws-sdk-scheduler = {version="1.91.0", features = ["test-util"]}
aws-sdk-secretsmanager = {version="1.97.0", features = ["test-util"]}
