[package]
name = "on-call-support"
version = "0.4.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
aws_lambda_events = { version = "1.0.3", default-features = false, features = ["apigw"] }
aws-config = { version = "1.8.14", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-esdk = "1.2.2"
aws-sdk-cloudformation = { version = "1.108.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-sdk-dynamodb = { version = "1.107.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-sdk-eventbridge = { version = "1.102.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-sdk-kms = { version = "1.102.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-sdk-lambda = { version = "1.117.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-sdk-scheduler = { version = "1.95.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"] }
aws-sdk-secretsmanager = {  version="1.101.0", default-features = false, features = ["behavior-version-latest", "rt-tokio", "default-https-client"]}
aws-smithy-http-client = { version = "1.1.11", default-features = false, features = ["rustls-aws-lc"] }
base64 = "0.22.1"
chacha20poly1305 = {version="0.10.1", features=["std"]}
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = { version = "0.10.4", features = ["std", "case-insensitive", "serde"] }
clap = {version ="4.5.60", features=["derive"]}
cron = "0.15.0"
derive_more = {version = "2.1.1", features=["full"]}
futures = "0.3.32"
hex = "0.4.3"
lambda_runtime = "1.0.2"
lazy_static = "1.5.0"
regex = "1.12.3"
reqwest = {version="0.13", default-features = false, features=["gzip", "json", "query", "rustls"]}
ring = "0.17.14"
rsb_derive = "0.5.1"
rvstruct = "0.3.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_with = {version = "3.17.0", features = ["json"]}
shlex = "1.3.0"
slack-morphism = "2.18"
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "^1.49.0", features=["rt-multi-thread", "macros", "sync"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log", "json"] }

[dev-dependencies]
aws-sdk-cloudformation = {version="1.108.0", features = ["test-util"]}
aws-sdk-dynamodb = {version="1.107.0", features = ["test-util"]}
aws-sdk-eventbridge = {version="1.102.0", features = ["test-util"]}
aws-sdk-scheduler = {version="1.95.0", features = ["test-util"]}
aws-sdk-secretsmanager = {version="1.101.0", features = ["test-util"]}
aws-smithy-mocks = "0.2.5"
pretty_assertions = "1.4"
wiremock = "0.6"
